--- a/MAIN_PROJECT/Model Delivery/templates/index.html
+++ b/MAIN_PROJECT/Model Delivery/templates/index.html
@@ -7,8 +7,9 @@
 
 body{ 
   background-image: url('static/images/start2.png');
-  background-position: center;
-  background-size:cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   font-family:sans-serif;
   margin-top:40px;
     }
