--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@ form { max-width:420px; margin:50px auto; }
   color:rgb(169, 92, 59);
   }
 .inputs{
-  color:purple;
+  color:white;
   font-family: Helvetica, Arial, sans-serif;
   font-weight:500;
   font-size: 18px;
