--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <style>
 
 body{ 
-  background-image: url('static/images/start2.png');
+  background-image: linear-gradient(to right,teal,mediumaquamarine, darkcyan);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -17,7 +17,7 @@ form { max-width:420px; margin:50px auto; }
 .form1{ 
   max-width:1000px; margin:50px auto;
   position:relative;
-  color:rgb(169, 92, 59);
+  color:cyan;
   }
 .inputs{
   color:white;
@@ -26,7 +26,7 @@ form { max-width:420px; margin:50px auto; }
   font-size: 18px;
   border-radius: 5px;
   line-height: 22px;
-  background-color: #EBA286;
+  background-color: mediumturquoise;
   border:2px solid rgb(47, 79, 79);
   transition: all 0.3s;
   padding: 13px;
@@ -74,7 +74,7 @@ form { max-width:420px; margin:50px auto; }
   width:480px;
   border-radius:6px;
   font-size:23px;
-  color: rgb(160, 87, 133);
+  color: cyan;
 }
 .login{
   position:relative;
@@ -93,7 +93,7 @@ Based on the rejections, a company will be motivated to come up with new product
 <form action="{{url_for('predict')}}"method = "post">
 <h1 class='desc1' > Start-up Success Prediction</h1>
 <h2 class='enter_val'>Does the company have advertisement label?(Type 1 for YES and 0 for NO)</h2>
-<input type = 'number'  class = 'inputs' name = 'labels'/>
+<input type = 'number'  class = 'inputs' name = 'labels' min="0" max="1"/>
 <h2 class='enter_val'>Please enter age of the company when it received it's first funding</h2>
 <input class = 'inputs' type = 'double' name = 'age_first_funding_year'/>
 <h2 class='enter_val'>Please enter age of the company when it received it's first milestone</h2>
