--- a/templates/index.html
+++ b/templates/index.html
@@ -93,21 +93,31 @@ Based on the rejections, a company will be motivated to come up with new product
 <form action="{{url_for('predict')}}"method = "post">
 <h1 class='desc1' > Start-up Success Prediction</h1>
 <h2 class='enter_val'>Does the company have advertisement label?(Type 1 for YES and 0 for NO)</h2>
-<input type = 'number'  class = 'inputs' name = 'labels' min="0" max="1"/>
+<input type="radio" name="options" > Yes </input>
+<input type="radio" name="options"> No </input>
+
 <h2 class='enter_val'>Please enter age of the company when it received it's first funding</h2>
 <input class = 'inputs' type="number" step="any" name = 'age_first_funding_year'/>
+
 <h2 class='enter_val'>Please enter age of the company when it received it's first milestone</h2>
 <input class = 'inputs' type="number" step="any" name = 'age_first_milestone_year'  />
+
 <h2 class='enter_val'>The relationship that the companies have with their clients(Please enter a value between 1 to 100)</h2>
 <input class = 'inputs'type = 'number' name = 'relationships' min="1" max="100"/>
+
 <h2 class='enter_val'>Number of significant events within the startup ecosystem(Milestones)</h2>
 <input class = 'inputs' type = 'number' name = 'milestones'/>
-<h2 class='enter_val'>Did the company receive the second round of funding? (Type 1 for YES and 0 for NO)</h2>
-<input class = 'inputs' type = 'number' name = 'Round B?' min="0" max="1"/>
+
+<h2 class='enter_val'>Did the company receive the second round of funding?</h2>
+<input type="radio" name="options2" > Yes </input>
+<input type="radio" name="options2"> No </input>
+
 <h2 class='enter_val'>Mention the average of participants</h2>
 <input class = 'inputs' input type="number" step="any" name = 'avg_participants'/>
+
 <h2 class='enter_val'>Is the company listed as top 500?(Type 1 for YES and 0 for NO)</h2>
-<input class = 'inputs' type = 'number' name = 'is_top500' min="0" max="1" required = 'required'/>
+<input type="radio" name="options1" > Yes </input>
+<input type="radio" name="options1"> No </input>
 <h1 class='result1'>{{ prediction_text }}</h1>
 <br>
 <br>
