--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,19 @@ body{
   font-family:sans-serif;
   margin-top:40px;
     }
+.radio{
+  color: red;
+  display: block;
+  float: left;
+  width: 100%;
+  height: 20px;
+  border-bottom: 1px solid #333;
+}
+.radio_lab{
+  color:rgb(47, 79, 79);
+  }
+.radio_lab:hover, radio_label:active{ color:#CC4949; }  
+
 form { max-width:420px; margin:50px auto; }
 .form1{ 
   max-width:1000px; margin:50px auto;
@@ -92,9 +105,11 @@ Based on the rejections, a company will be motivated to come up with new product
 
 <form action="{{url_for('predict')}}"method = "post">
 <h1 class='desc1' > Start-up Success Prediction</h1>
-<h2 class='enter_val'>Does the company have advertisement label?(Type 1 for YES and 0 for NO)</h2>
-<input type="radio" name="options" > Yes </input>
-<input type="radio" name="options"> No </input>
+<h2 class='enter_val'>Does the company have advertisement label?</h2>
+<input class='radio' id="yes" value="yes" type="radio" name="options" >
+<label class='radio_lab' for="yes">Yes</label>
+<input class='radio' id="no" value="no" type="radio" name="options" >
+<label class='radio_lab' for="no">No</label>
 
 <h2 class='enter_val'>Please enter age of the company when it received it's first funding</h2>
 <input class = 'inputs' type="number" step="any" name = 'age_first_funding_year'/>
@@ -109,15 +124,21 @@ Based on the rejections, a company will be motivated to come up with new product
 <input class = 'inputs' type = 'number' name = 'milestones'/>
 
 <h2 class='enter_val'>Did the company receive the second round of funding?</h2>
-<input type="radio" name="options2" > Yes </input>
-<input type="radio" name="options2"> No </input>
+<input class='radio' id="yes" value="yes" type="radio" name="options2" >
+<label class='radio_lab' for="yes">Yes</label>
+<input class='radio' id="no" value="no" type="radio" name="options2" >
+<label class='radio_lab' for="no">No</label>
+
 
 <h2 class='enter_val'>Mention the average of participants</h2>
 <input class = 'inputs' input type="number" step="any" name = 'avg_participants'/>
 
-<h2 class='enter_val'>Is the company listed as top 500?(Type 1 for YES and 0 for NO)</h2>
-<input type="radio" name="options1" > Yes </input>
-<input type="radio" name="options1"> No </input>
+<h2 class='enter_val'>Is the company listed as top 500?</h2>
+<input class='radio' id="yes" value="yes" type="radio" name="options1" >
+<label class='radio_lab' for="yes">Yes</label>
+<input class='radio' id="no" value="no" type="radio" name="options1" >
+<label class='radio_lab' for="no">No</label>
+
 <h1 class='result1'>{{ prediction_text }}</h1>
 <br>
 <br>
