--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@ form { max-width:420px; margin:50px auto; }
 .form1{ 
   max-width:1000px; margin:50px auto;
   position:relative;
-  color:cyan;
+  color: #587e76;
   }
 .inputs{
   color:white;
@@ -84,36 +84,42 @@ form { max-width:420px; margin:50px auto; }
 .login{
   position:relative;
 }
-
+.inline-block-child{
+  display: inline-block;
+  vertical-align: top;
+  padding: 20px;
+}
 </style>
 </head>
 
 <body>
-<div class = "login">
+<div class="login">
+	<center><h1 class='desc1'>Start-up Success Prediction</h1></center>
+
+<div class="child inline-block-child" style= "text-align:left"> 
 <h3 class='form1'>Investors often suffer from huge losses for investing in the wrong company. In real life, it is daunting for investors to predict success for a start-up. My model helps to predict the success rate of the start-up companies based on various parameters like location, funding, type of business, etc. Using this model, investors will get a fair idea on which companies they should target for investment. A company will be considered a success based on the company’s mergers and acquisitions. A company will be considered a failure if it was forced to shut down.
 Based on the rejections, a company will be motivated to come up with new products and new solutions.
 
 </h3>
-
+</div>
+<div class="child inline-block-child"> 
 <form action="{{url_for('predict')}}"method = "post">
-<h1 class='desc1' > Start-up Success Prediction</h1>
-
 <h2 class='enter_val'>Does the company have advertisement label?</h2>
 <input class='radio' id="yes" value="yes" type="radio" name="options" >
 <label class='radio_lab' for="yes">Yes</label>
 <input class='radio' id="no" value="no" type="radio" name="options" >
 <label class='radio_lab' for="no">No</label>
 
-<h2 class='enter_val'>Please enter age of the company when it received it's first funding</h2>
+<h2 class='enter_val'>Enter age of the company when it received it's first funding</h2>
 <input class = 'inputs' type="number" step="any" name = 'age_first_funding_year'/>
 
-<h2 class='enter_val'>Please enter age of the company when it received it's first milestone</h2>
+<h2 class='enter_val'>Enter age of the company when it received it's first milestone</h2>
 <input class = 'inputs' type="number" step="any" name = 'age_first_milestone_year'  />
 
-<h2 class='enter_val'>The relationship that the companies have with their clients(Please enter a value between 1 to 100)</h2>
+<h2 class='enter_val'>Enter the relationship that the companies have with their clients(Please enter a value between 1 to 100)</h2>
 <input class = 'inputs'type = 'number' name = 'relationships' min="1" max="100"/>
 
-<h2 class='enter_val'>Number of significant events within the startup ecosystem(Milestones)</h2>
+<h2 class='enter_val'>Number of significant events within the startup ecosystem(Milestones)?</h2>
 <input class = 'inputs' type = 'number' name = 'milestones'/>
 
 <h2 class='enter_val'>Did the company receive the second round of funding?</h2>
@@ -123,7 +129,7 @@ Based on the rejections, a company will be motivated to come up with new product
 <label class='radio_lab' for="no2">No</label>
 
 
-<h2 class='enter_val'>Mention the average of participants</h2>
+<h2 class='enter_val'>Mention the average of employees in the company</h2>
 <input class = 'inputs' input type="number" step="any" name = 'avg_participants'/>
 
 <h2 class='enter_val'>Is the company listed as top 500?</h2>
@@ -140,7 +146,7 @@ Based on the rejections, a company will be motivated to come up with new product
 </form>
 <br>
 <br>
-
+</div>
 </div>
 </body>
 </html>
