--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <style>
 
 body{ 
-  background-image: linear-gradient(to right,teal,mediumaquamarine, darkcyan);
+  background-image: linear-gradient(to right,darkcyan,mediumaquamarine, darkcyan);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -24,7 +24,7 @@ form { max-width:420px; auto; }
 vertical-align: top;
   max-width:1500px;
   position:relative;
-  color: #587e76;
+  color: yellow;
   }
 .inputs{
   color:white;
@@ -65,10 +65,6 @@ vertical-align: top;
   border-radius:6px;
   font-size:20px;
   color:rgb(47, 79, 79);
-}
-.desc{
-  position:relative;
-  color:rgb(169, 92, 59);
 }
 .desc1{
 vertical-align: top;
