--- a/templates/index.html
+++ b/templates/index.html
@@ -119,14 +119,14 @@ Based on the rejections, a company will be motivated to come up with new product
 <div class="child inline-block-child" style= "text-align:right"> 
 <center>
 <h2 class='enter_val'>Number of significant events within the startup ecosystem(Milestones)?</h2>
-<input class = 'inputs' type = 'number' name = 'milestones'/>
+<input class = 'inputs' type = 'number' min = "0" name = 'milestones'/>
 <h2 class='enter_val'>Did the company receive the second round of funding?</h2>
 <input class='radio' id="yes2" value="yes2" type="radio" name="options2" >
 <label class='radio_lab' for="yes2">Yes</label>
 <input class='radio' id="no2" value="no2" type="radio" name="options2" >
 <label class='radio_lab' for="no2">No</label>
 <h2 class='enter_val'>Mention the average of employees in the company</h2>
-<input class = 'inputs' input type="number" step="any" name = 'avg_participants'/>
+<input class = 'inputs' input type="number" step="any" min = "0" name = 'avg_participants'/>
 <h2 class='enter_val'>Is the company listed as top 500?</h2>
 <input class='radio' id="yes1" value="yes1" type="radio" name="options1" >
 <label class='radio_lab' for="yes1">Yes</label>
