--- a/templates/untitled1.html
+++ b/templates/untitled1.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<!html>
+<!doctype html>
+<html>
 <head>
-<meta charset = "UTF-8">
-<title>Start-up Success Prediction</title>
-<style>
+        <title>Startup Succees Prediction</title>
+        <style>
 
 body{ 
   background-image: linear-gradient(to right,darkcyan,mediumaquamarine, darkcyan);
@@ -36,9 +35,11 @@ vertical-align: top;
   border:2px solid rgb(47, 79, 79);
   transition: all 0.3s;
   padding: 13px;
-  width:70%;
+  width:90%;
   box-sizing: border-box;
   outline:0;
+  }
+  
   }
 .inputs:focus { border:2px solid #CC4949; }  
   [type="submit"] {
@@ -64,6 +65,7 @@ vertical-align: top;
   font-size:20px;
   width:100%
   color:rgb(47, 79, 79);
+  font-size:12px;
 }
 .desc1{
 vertical-align: top;
@@ -83,7 +85,7 @@ vertical-align: top;
 }
 .inline-block-child{
   display: inline-block;
-  padding: 20px;
+  padding: 5px;
   vertical-align: top;
 }
 .button{
@@ -91,53 +93,61 @@ vertical-align: top;
 }
 </style>
 </head>
-
 <body>
-<div class="login">
-	<center><h1 class='desc1'>Start-up Success Prediction</h1></center>
-<center><h3 class='form1'>Investors often suffer from huge losses for investing in the wrong company. In real life, it is daunting for investors to predict success for a start-up. My model helps to predict the success rate of the start-up companies based on various parameters like location, funding, type of business, etc. Using this model, investors will get a fair idea on which companies they should target for investment. A company will be considered a success based on the company’s mergers and acquisitions. A company will be considered a failure if it was forced to shut down.
+<div class="holder">
+<div class='"login">
+<center><h1 class='desc1'>Start-up Success Prediction</h1></center>
+<center><h3 class='form1'>Investors often suffer from huge losses for investing in the wrong company. 
+In real life, it is daunting for investors to predict success for a start-up. 
+My model helps to predict the success rate of the start-up companies based on various parameters like location, funding, type of business, etc. 
+Using this model, investors will get a fair idea on which companies they should target for investment. 
+A company will be considered a success based on the company’s mergers and acquisitions. 
+A company will be considered a failure if it was forced to shut down.
 Based on the rejections, a company will be motivated to come up with new products and new solutions.
-</h3><center>
+</h3></center>
+</div>
+
 <div class="child inline-block-child"> 
+
 <form action="{{url_for('predict')}}"method = "post">
 <h2 class='enter_val'>Does the company have advertisement label?</h2>
-<input class='radio' id="yes" value="yes" type="radio" name="options" >
+<input class='radio' id="yes" value="yes" type="radio" name="options" />
 <label class='radio_lab' for="yes">Yes</label>
-<input class='radio' id="no" value="no" type="radio" name="options" >
+<input class='radio' id="no" value="no" type="radio" name="options" />
 <label class='radio_lab' for="no">No</label>
 <h2 class='enter_val'>Enter age of the company when it received it's first funding</h2>
-<input class = 'inputs' type="number" step="any" name = 'age_first_funding_year'/>
+<input class = 'inputs' type="number" step="any" name = 'age_first_funding_year' required = "required"/>
 <h2 class='enter_val'>Enter age of the company when it received it's first milestone</h2>
-<input class = 'inputs' type="number" step="any" name = 'age_first_milestone_year'  />
+<input class = 'inputs' type="number" step="any" name = 'age_first_milestone_year' required = "required" />
 <h2 class='enter_val'>Enter the relationship that the companies have with their clients(Please enter a value between 1 to 100)</h2>
-<input class = 'inputs'type = 'number' name = 'relationships' min="1" max="100"/>
+<input class = 'inputs' type = 'number' name = 'relationships' min="1" max="100" required = "required"/>
+
 </div>
 
 <div class="child inline-block-child" style= "text-align:right"> 
 
 <h2 class='enter_val'>Number of significant events within the startup ecosystem(Milestones)?</h2>
-<input class = 'inputs' type = 'number' min = "0" name = 'milestones'/>
+<input class = 'inputs' type = 'number' min = "0" name = 'milestones' required = "required"/>
 <h2 class='enter_val'>Did the company receive the second round of funding?</h2>
-<input class='radio' id="yes2" value="yes2" type="radio" name="options2" >
+<input class='radio' id="yes2" value="yes2" type="radio" name="options2" />
 <label class='radio_lab' for="yes2">Yes</label>
-<input class='radio' id="no2" value="no2" type="radio" name="options2" >
+<input class='radio' id="no2" value="no2" type="radio" name="options2" />
 <label class='radio_lab' for="no2">No</label>
 <h2 class='enter_val'>Mention the average of employees in the company</h2>
-<input class = 'inputs' type="number" step="any" min = "0" name = 'avg_participants'/>
+<input class = 'inputs' type="number" step="any" min = "0" name = 'avg_participants' required = "required"/>
 <h2 class='enter_val'>Is the company listed as top 500?</h2>
-<input class='radio' id="yes1" value="yes1" type="radio" name="options1" >
+<input class='radio' id="yes1" value="yes1" type="radio" name="options1" />
 <label class='radio_lab' for="yes1">Yes</label>
-<input class='radio' id="no1" value="no1" type="radio" name="options1" >
+<input class='radio' id="no1" value="no1" type="radio" name="options1" />
 <label class='radio_lab' for="no1">No</label>
-
 </div>
+<div class="predict_div">
 <center> <h1 class='result1'>{{ prediction_text }}</h1>
 <br>
 <button type = "submit" class='button'> Predict</button> </center>
-</form>
-<br>
-<br>
 </div>
-
+<br>
+</form>
+</div>
 </body>
 </html>
