--- a/templates/untitled1.html
+++ b/templates/untitled1.html
@@ -43,7 +43,7 @@ vertical-align: top;
   }
 .inputs:focus { border:2px solid #CC4949; }  
   [type="submit"] {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
   width: 100%;
   background:rgb(47, 79, 79);
   border-radius:5px;
@@ -95,8 +95,9 @@ vertical-align: top;
 </head>
 <body>
 <div class="holder">
-<center><h1 class='desc1'>Start-up Success Prediction</h1></center>
-<center><h3 class='form1'>Investors often suffer from huge losses for investing in the wrong company. 
+<center><h1 class="desc1">Start-up Success Prediction</h1></center>
+<div class="login">
+<center><h3 class="form1">Investors often suffer from huge losses for investing in the wrong company. 
 In real life, it is daunting for investors to predict success for a start-up. 
 My model helps to predict the success rate of the start-up companies based on various parameters like location, funding, type of business, etc. 
 Using this model, investors will get a fair idea on which companies they should target for investment. 
@@ -104,48 +105,46 @@ A company will be considered a success based on the company’s mergers and acqu
 A company will be considered a failure if it was forced to shut down.
 Based on the rejections, a company will be motivated to come up with new products and new solutions.
 </h3></center>
-<div class='"login">
-
 </div>
 
 <div class="child inline-block-child"> 
 
 <form action="{{url_for('predict')}}"method = "post">
-<h2 class='enter_val'>Does the company have advertisement label?</h2>
-<input class='radio' id="yes" value="yes" type="radio" name="options" />
-<label class='radio_lab' for="yes">Yes</label>
-<input class='radio' id="no" value="no" type="radio" name="options" />
-<label class='radio_lab' for="no">No</label>
-<h2 class='enter_val'>Enter age of the company when it received it's first funding</h2>
-<input class = 'inputs' type="number" step="any" name = 'age_first_funding_year' required = "required"/>
-<h2 class='enter_val'>Enter age of the company when it received it's first milestone</h2>
-<input class = 'inputs' type="number" step="any" name = 'age_first_milestone_year' required = "required" />
-<h2 class='enter_val'>Enter the relationship that the companies have with their clients(Please enter a value between 1 to 100)</h2>
-<input class = 'inputs' type = 'number' name = 'relationships' min="1" max="100" required = "required"/>
+<h2 class="enter_val">Does the company have advertisement label?</h2>
+<input class="radio" id="yes" value="yes" type="radio" name="options" />
+<label class="radio_lab" for="yes">Yes</label>
+<input class="radio" id="no" value="no" type="radio" name="options" />
+<label class="radio_lab" for="no">No</label>
+<h2 class="enter_val">Enter age of the company when it received it"s first funding</h2>
+<input class = "inputs" type="number" step="any" name = "age_first_funding_year" required = "required"/>
+<h2 class="enter_val">Enter age of the company when it received it"s first milestone</h2>
+<input class = "inputs" type="number" step="any" name = "age_first_milestone_year" required = "required" />
+<h2 class="enter_val">Enter the relationship that the companies have with their clients(Please enter a value between 1 to 100)</h2>
+<input class = "inputs" type = "number" name = "relationships" min="1" max="100" required = "required"/>
 
 </div>
 
 <div class="child inline-block-child" style= "text-align:right"> 
 
-<h2 class='enter_val'>Number of significant events within the startup ecosystem(Milestones)?</h2>
-<input class = 'inputs' type = 'number' min = "0" name = 'milestones' required = "required"/>
-<h2 class='enter_val'>Did the company receive the second round of funding?</h2>
-<input class='radio' id="yes2" value="yes2" type="radio" name="options2" />
-<label class='radio_lab' for="yes2">Yes</label>
-<input class='radio' id="no2" value="no2" type="radio" name="options2" />
-<label class='radio_lab' for="no2">No</label>
-<h2 class='enter_val'>Mention the average of employees in the company</h2>
-<input class = 'inputs' type="number" step="any" min = "0" name = 'avg_participants' required = "required"/>
-<h2 class='enter_val'>Is the company listed as top 500?</h2>
-<input class='radio' id="yes1" value="yes1" type="radio" name="options1" />
-<label class='radio_lab' for="yes1">Yes</label>
-<input class='radio' id="no1" value="no1" type="radio" name="options1" />
-<label class='radio_lab' for="no1">No</label>
+<h2 class="enter_val">Number of significant events within the startup ecosystem(Milestones)?</h2>
+<input class = "inputs" type = "number" min = "0" name = "milestones" required = "required"/>
+<h2 class="enter_val">Did the company receive the second round of funding?</h2>
+<input class="radio" id="yes2" value="yes2" type="radio" name="options2" />
+<label class="radio_lab" for="yes2">Yes</label>
+<input class="radio" id="no2" value="no2" type="radio" name="options2" />
+<label class="radio_lab" for="no2">No</label>
+<h2 class="enter_val">Mention the average of employees in the company</h2>
+<input class = "inputs" type="number" step="any" min = "0" name = "avg_participants" required = "required"/>
+<h2 class="enter_val">Is the company listed as top 500?</h2>
+<input class="radio" id="yes1" value="yes1" type="radio" name="options1" />
+<label class="radio_lab" for="yes1">Yes</label>
+<input class="radio" id="no1" value="no1" type="radio" name="options1" />
+<label class="radio_lab" for="no1">No</label>
 </div>
 <div class="predict_div">
-<center> <h1 class='result1'>{{ prediction_text }}</h1>
+<center> <h1 class="result1">{{ prediction_text }}</h1>
 <br>
-<button type = "submit" class='button'> Predict</button> </center>
+<button type = "submit" class="button"> Predict</button> </center>
 </div>
 <br>
 </form>
